# SimpleProtocol

./: CMakeLists.txt  LICENSE  README.md
include/: SimpleProtocol.h
include/internal/: Decoder.h  Encoder.h  Packet.h  PacketPool.h
samples/c/: SimpleFileStream.c
samples/cpp/: udp_client.cpp  udp_server.cpp
src/: Decoder.cpp  Encoder.cpp  Packet.cpp  PacketPool.cpp
test/: CMakeLists.txt  DecoderTest.cpp  EncoderTest.cpp  PacketPoolTest.cpp  PacketTest.cpp
